Fix compiler warnings in jdk.rmic